Show 'extra' info-field

--- a/views/data.html
+++ b/views/data.html
@@ -90,6 +90,7 @@
                 <span onclick="sortBy('dieet', event)">Dieet</span>
                 <span onclick="sortBy('gezondheid', event)">Gezondheid</span>
                 <span onclick="sortBy('comments', event)">Opmerkingen</span>
+                <span onclick="sortBy('extra', event)">Extra</span>
                 <span onclick="sortBy('vertrek_terug', event)">Van/tot</span>
                 <span onclick="sortBy('opstap_uitstap', event)"
                   >Opstap/uitstap</span
@@ -113,6 +114,7 @@
                   <span>{{this.dieet}}</span>
                   <span>{{this.gezondheid}}</span>
                   <span>{{this.comments}}</span>
+                  <span>{{this.extra}}</span>
                   <span>{{this.vertrek_terug}}</span>
                   <span>{{this.opstap_uitstap}}</span>
                 </div>
