--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,8 +25,7 @@
 
   <div class="checkbox">
     <input type="checkbox" id="trust" name="trust" value="yes" />
-    <label for="trust">Ik ken Rien persoonlijk en vertrouw hem volledig met mijn
-      inloggegevens van mijnreisleiding.nl</label>
+    <label for="trust">Ik begrijp dat ik hiermee de logingegevens van mijnreisleiding.nl opstuur naar deze applicatie.</label>
   </div>
   <button type="submit">Data verzamelen</button>
   <div class="loader"></div>
