--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,10 @@
 
 <body>
   <div class="container">
+    <div class="header">
     <h1>Vinea++</h1>
+    <span class="powered-by" data-hover-text="Ik ben inmiddels 10 jaar reisleider en heb een master in cyber security. Je kunt er dus redelijkerwijs vanuit gaan dat deze applicatie goed met je gegevens omgaat.">Ontwikkeld door Rien (Heuver)</span>
+  </div>
     {{{body}}}
   </div>
 </body>
