Adds guide function

--- a/views/data.html
+++ b/views/data.html
@@ -69,6 +69,7 @@
                 <span>Telefoon</span>
                 <span>Download contact</span>
                 <span>Kamp</span>
+                <span>Functie</span>
               </div>
               <div class="rows">
                 {{#each this.guides}}
@@ -84,6 +85,7 @@
                     ></span
                   >
                   <span>{{this.camp}}</span>
+                  <span>{{this.function}}</span>
                 </div>
                 {{/each}}
               </div>
